--- a/index.html
+++ b/index.html
@@ -7,29 +7,54 @@
 </head>
 <body>
     <header>Contact-Me</header><br>
+
     <form>
     <label for="Username">Username</label>
     <input type="text" id="Username" placeholder="Username" required="true"><br>
+
     <label for="Password">Password</label>
-    <input type="password" id="Password"><br>
+    <input type="password" id="Password" placeholder="Password"><br>
+
     <label for="Email">Email</label>
     <input type="text" id="Email" placeholder="Email" Required="true"><br>
+
     <label for="Address">Address</label>
     <input type="text" id="Address" placeholder="Address"><br>
+
     <label for="Graduate">Graduate</label>
     <input type="radio" id="Graduate" name="Qualification" value="Graduate"><br>
+
     <label for="12thPass">12thPass</label>
     <input type="radio" id="12thPass" name="Qualification" value="12thPass"><br>
+
     <label for="MetricPass">MetricPass</label>
     <input type="radio" id="MetricPass" name="Qualification" value="MetricPass"><br>
+
     <label for="Favorite Color">Favorite Color</label>
     <select id="Favorite Color" name="Favorite Color">
     <option value="White">White</option>
     <option value="Green">Green</option>
     <option value="Blue">Blue</option>
     <option value="Orange">Orange</option>
-</select><br>
+    </select><br>
+
+    <label for="c">Completed Languages :</label>
+
+    <label for="c++">C++</label>
+    <input type="checkbox" name="language" id="c++" value="c++">
+
+
+    <label for="Java">Java</label>
+    <input type="checkbox" name="language" id="Java" value="Java" >
+
+    <label for="Python">Python</label>
+    <input type="checkbox" name="language" id="Python" value="Python" ><br>
+
+    <label for="date">Date</label>
+    <input type="date" ><br>
+
     <input type ="submit" value="Submit">
+
 </form>
 </body>
 </html>
